--- a/doc/cha-cert-auth2.texi
+++ b/doc/cha-cert-auth2.texi
@@ -579,7 +579,8 @@ or through an ASN.1 encoding of the X.509 @code{SubjectPublicKeyInfo}
 sequence.
 
 @showfuncdesc{gnutls_pubkey_import_x509}
-@showfuncD{gnutls_pubkey_import_openpgp,gnutls_pubkey_import_pkcs11,gnutls_pubkey_import_pkcs11_url,gnutls_pubkey_import_privkey}
+@showfuncE{gnutls_pubkey_import_openpgp,gnutls_pubkey_import_pkcs11,gnutls_pubkey_import_pkcs11_url,gnutls_pubkey_import_privkey,gnutls_pubkey_import}
+@showfuncdesc{gnutls_pubkey_export}
 
 Additional functions are available that will return
 information over a public key.
