--- a/THANKS
+++ b/THANKS
@@ -126,6 +126,7 @@ David Hoyt                      *hoyt6 [at] llnl.gov*
 Joseph Graham                   *joe [at] t67.eu*
 Eli Zaretskii                   *eliz [at] gnu.org*
 Patrick Pelletier               *code [at] funwithsoftware.org*
+Sean Buckheister                *s_buckhe [at] cs.uni-kl.de*
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
