--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,9 @@ status from an ocsp server.
 ** command line apps: Use gnu autogen (libopts) to parse command
 line arguments and template files.
 
+** libgnutls: Corrected DTLS lost packet handling in
+the last flight.
+
 ** libgnutls: Corrected DTLS retransmission timeouts. 
 Report and patch by Sean Buckheister.
 
