--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -1,3 +1,12 @@
+@Misc{KEYPIN,
+	author = "Chris Evans and Chris Palmer",
+	title = "{Public Key Pinning Extension for HTTP}",
+	month = "December",
+	year = "2011",
+	note = "Available from \url{http://tools.ietf.org/html/draft-ietf-websec-key-pinning-01}",
+	url = "http://tools.ietf.org/html/draft-ietf-websec-key-pinning-01"
+}
+
 @Misc{ RFC2246,
 	author = "Tim Dierks and Christopher Allen",
 	title = "{The TLS Protocol Version 1.0}",
