--- a/NEWS
+++ b/NEWS
@@ -19,11 +19,12 @@ status from an ocsp server.
 ** command line apps: Use gnu autogen (libopts) to parse command
 line arguments and template files.
 
-** libgnutls: Corrected DTLS lost packet handling in
-the last flight.
+** tests: Added stress test for DTLS packet losses and 
+out-of-order receival. Contributed by Sean Buckheister.
 
-** libgnutls: Corrected DTLS retransmission timeouts. 
-Report and patch by Sean Buckheister.
+** libgnutls: Several updates and corrections in the DTLS
+DTLS lost packet handling and retransmission timeouts.
+Report and patches by Sean Buckheister.
 
 ** libgnutls: Added new functions to easily allow the usage of
 a trust on first use (SSH-style) authentication.
