--- a/doc/cha-internals.texi
+++ b/doc/cha-internals.texi
@@ -372,7 +372,7 @@ instructions set, using the kernel interface will introduce an
 unneeded layer. For this reason GnuTLS includes such optimizations
 found in popular processors such as the AES-NI or VIA PADLOCK instruction sets.
 This is achieved using a mechanism that detects CPU capabilities and
-overrides parts of crypto backend at runtime.
+overrides parts of crypto back-end at runtime.
 The next section discusses the registration of a detected algorithm
 optimization. For more information please consult the @acronym{GnuTLS}
 source code in @code{lib/accelerated/}.
@@ -398,25 +398,25 @@ and leave the rest of subsystem intact.
 
 @subsubheading Overriding the cryptographic library
 In some systems, that might contain a broad acceleration engine, it 
-might be desirable to override big parts of the cryptographic backend, 
+might be desirable to override big parts of the cryptographic back-end, 
 or even all of them. The following functions are provided for this reason.
 
 @itemize
 
 @item @code{gnutls_crypto_cipher_register}:
-To override the cryptographic algorithms backend.
+To override the cryptographic algorithms back-end.
 
 @item @code{gnutls_crypto_digest_register}:
-To override the digest algorithms backend.
+To override the digest algorithms back-end.
 
 @item @code{gnutls_crypto_rnd_register}:
-To override the random number generator backend.
+To override the random number generator back-end.
 
 @item @code{gnutls_crypto_bigint_register}:
-To override the big number number operations backend.
+To override the big number number operations back-end.
 
 @item @code{gnutls_crypto_pk_register}:
-To override the public key encryption backend. This is tied to the
+To override the public key encryption back-end. This is tied to the
 big number operations so either none or both of them should be overriden.
 
 @end itemize
